# incident-precedent-retrieval-harness

./: .env.example  .gitignore  README.md  pyproject.toml
apps/local-demo-ui/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
data/imports/: relayops-demo-incident-export.jsonl
data/incidents/: INC-001.json  INC-002.json  (+10 more)
scripts/: build_local_dense_index.py  check_sie_health.py  import_and_freeze_tranche_02_future_heldout.py  import_procedure_asymmetry_fixture.py  inspect_incident_import_batch.py  provider_capability_spike.py  run_anti_anchoring_policy.py  run_conditional_representative_selection_activation_readiness.py  run_connection_pool_direct_signal_calibration.py  run_connection_pool_representative_preview.py  run_dense_rerank_calibration.py  run_dense_retrieval_calibration.py  run_eval_110_representative_selection_autopsy.py  run_frozen_typed_triage_promotion_gate.py  run_heldout_direct_signal_comparison.py  run_heldout_evaluation.py  run_heldout_failure_autopsy.py  run_hybrid_rerank_calibration.py  run_keyword_baseline.py  run_local_submission_demo.py  run_policy_shadow_integration_calibration.py  run_procedure_asymmetry_fixture_comparison.py  run_selection_calibration_readiness_gate.py  run_strict_dominance_representative_selection_calibration.py  run_tranche_02_future_heldout_comparison.py  run_typed_triage_calibration.py  validate_local_sie_submission_operations.py  validate_representative_selection_calibration_fixtures.py  validate_representative_selection_schema.py
(+345 files in other folders)
